changed package to ai.arcblroth.overcaffinated. This appears to break the plugin.